# py-exec-wrapper

./: README.md  pyproject.toml
exec_wrapper/: __init__.py
